--- a/lesson11/lesson9/css/large.css
+++ b/lesson11/lesson9/css/large.css
@@ -21,6 +21,10 @@
         margin: auto;
     }
 
+    footer {
+        padding: 2rem;
+    }
+
     main {
         width: 80%;
         padding: 0;
