--- a/lesson10/css/large.css
+++ b/lesson10/css/large.css
@@ -19,6 +19,10 @@
         margin: auto;
     }
 
+    footer {
+        padding: 2rem;
+    }
+
     main, #contact {
         width: 80%;
         padding: 0;
