--- a/lesson11/lesson7/css/large.css
+++ b/lesson11/lesson7/css/large.css
@@ -25,6 +25,10 @@
         margin: auto;
     }
 
+    footer {
+        padding: 2rem;
+    }
+
     main, #contact {
         width: 80%;
         padding: 0;
